syntax = "proto3";

package api;

message AssignSurveyData{
    string id = 1;
    string surveyID = 2;
    string userID = 3;
    string studyID = 4;
}

service AssignSurvey{
    rpc AssignSurvey (AssignSurveyData) returns (AssignSurveyData);
}